--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
             <h3>I'm, </h3>
             <h2>FAZA WAHYU ADI PUTRA</h2>
             <div class="buttons">
-                <a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\awalan\Project_1.html" class="btn next">READ MORE ABOUT ME</a>
+                <a href="Project_1.html" class="btn next">READ MORE ABOUT ME</a>
             </div>
         </div>
         <div class="right-section">
