--- a/Project_1.html
+++ b/Project_1.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <img src="C:\Users\fazaw\OneDrive\Desktop\projek web uts\profilicon.jpg" alt="profile-icon" class="profile-nav-logo">
+            <img src="projekweb1/profilicon.jpg" alt="profile-icon" class="profile-nav-logo">
             <ul class="nav-links">
                 <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\home.html">PROFILE</a></li>
                 <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\akademik\akademik.html">ACADEMIC</a></li>
