--- a/Project_1.html
+++ b/Project_1.html
@@ -15,11 +15,11 @@
         <div class="nav-container">
             <img src="profilicon.jpg" alt="profile-icon" class="profile-nav-logo">
             <ul class="nav-links">
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\home.html">PROFILE</a></li>
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\akademik\akademik.html">ACADEMIC</a></li>
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\prestasi\prestasi.html">ACHIEVEMENTS</a></li>
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\album\album.html">GALLERY</a></li>
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\kontak\kontak.html">CONTACT</a></li>
+                <li><a href="home.html">PROFILE</a></li>
+                <li><a href="akademik.html">ACADEMIC</a></li>
+                <li><a href="prestasi.html">ACHIEVEMENTS</a></li>
+                <li><a href="album.html">GALLERY</a></li>
+                <li><a href="kontak.html">CONTACT</a></li>
             </ul>
         </div>
     </nav>
