--- a/akademik.html
+++ b/akademik.html
@@ -9,9 +9,9 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <img src="C:\Users\fazaw\OneDrive\Desktop\projek web uts\profilicon.jpg" alt="profile-icon" class="profile-nav-logo">
+            <img src="profilicon.jpg" alt="profile-icon" class="profile-nav-logo">
             <ul class="nav-links">
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\awalan\Project_1.html"> PREVIOUS </a></li>
+                <li><a href="Project_1.html"> PREVIOUS </a></li>
             </ul>
         </div>
     </nav>
