--- a/album.html
+++ b/album.html
@@ -12,7 +12,7 @@
         <img src="profilicon.jpg" alt="profile-icon" class="profile-nav-logo"/>
         <ul class="nav-links">
           <li>
-            <a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\awalan\Project_1.html">PREVIOUS</a>
+            <a href="Project_1.html">PREVIOUS</a>
           </li>
         </ul>
       </div>
