--- a/prestasi.html
+++ b/prestasi.html
@@ -11,7 +11,7 @@
         <div class="nav-container">
             <img src="profilicon.jpg" class="profile-nav-logo">
             <ul class="nav-links">
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\awalan\Project_1.html"> PREVIOUS </a></li>
+                <li><a href="Project_1.html"> PREVIOUS </a></li>
             </ul>
         </div>
     </nav>
