--- a/album.html
+++ b/album.html
@@ -20,7 +20,7 @@
 
     <div class="container">
       <div class="header">
-        <h1>MY JOURNAL GALLERY PKL 2023</h1>
+        <h1>EVENT GALLERY PKL 2023</h1>
         <h2>___________________________</h2>
         <p><i>Maret 2023 - Desember 2023</i></p>
       </div>
