--- a/prestasi.html
+++ b/prestasi.html
@@ -5,20 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACHIEVEMENTS</title>
     <link rel="stylesheet" href="style_achievement.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <img src="profilicon.jpg" class="profile-nav-logo">
             <ul class="nav-links">
-                <li><a href="Project_1.html"> PREVIOUS </a></li>
+                <li><a href="Project_1.html"><i class="fa fa-home" aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
         <div class="header">
-            <h1>MY ACHIEVEMENTS</h1>
-            <h2>________________</h2>
             <h4>SERTIFIKAT UJI KOMPETENSI KEAHLIAN</h4>
             <p><i>Networking, Konfigurasi MikroTik, etc.</i></p>
         </div>
