--- a/Project_1.html
+++ b/Project_1.html
@@ -13,7 +13,6 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <img src="profilicon.jpg" alt="profile-icon" class="profile-nav-logo">
             <ul class="nav-links">
                 <li><a href="home.html">PROFILE</a></li>
                 <li><a href="akademik.html">ACADEMIC</a></li>
@@ -28,8 +27,7 @@
             <header>
                 <h1>FAZA WAHYU ADI PUTRA</h1>
                 <p><i class="fas fa-envelope"></i>  fazawahyu10@outlook.com</p>
-                    <p><i class="fas fa-phone"></i>  +62 852 9413 9950</p>
-                <p>Lokasi: Semarang Kota, Indonesia</p>
+                <p><i class="fa fa-street-view"></i> Kota Semarang, Indonesia</p>
             </header>
             
             <section class="summary">
