--- a/akademik.html
+++ b/akademik.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AKADEMIK</title>
     <link rel="stylesheet" href="style_akademik.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <img src="profilicon.jpg" alt="profile-icon" class="profile-nav-logo">
             <ul class="nav-links">
-                <li><a href="Project_1.html"> PREVIOUS </a></li>
+                <li><a href="Project_1.html"><i class="fa fa-home" aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </nav>
-    <h2 class="pendidikan-title">PENDIDIKAN</h2>
     <section class="pendidikan-section">
-        
         <div class="pendidikan-container">
             <div class="pendidikan-box">
                 <a href="https://www.instagram.com/smkn2_tasikmalaya/" target="_blank"><img src="smkn2.jpg" alt="smk" class="img-smk"></a>
