--- a/album.html
+++ b/album.html
@@ -5,23 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>gallery</title>
     <link rel="stylesheet" href="style_album.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+<body>
     <nav class="navbar">
-      <div class="nav-container">
-        <img src="profilicon.jpg" alt="profile-icon" class="profile-nav-logo"/>
-        <ul class="nav-links">
-          <li>
-            <a href="Project_1.html">PREVIOUS</a>
-          </li>
-        </ul>
-      </div>
+        <div class="nav-container">
+            <ul class="nav-links">
+                <li><a href="Project_1.html"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
     </nav>
 
     <div class="container">
       <div class="header">
-        <h1>EVENT GALLERY PKL 2023</h1>
-        <h2>___________________________</h2>
+        <h3>GALLERY PKL 2023</h3>
         <p><i>Maret 2023 - Desember 2023</i></p>
       </div>
       <div class="slideshow-container">
