--- a/kontak.html
+++ b/kontak.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <ul class="nav-links">
-                <li><a href="C:\Users\fazaw\OneDrive\Desktop\projek web uts\awalan\Project_1.html"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                <li><a href="Project_1.html"><i class="fa fa-home" aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </nav>
